<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_vader"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/icons8_chat_64_3x" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/mina_regular"
        android:text="@string/let_chat"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/user_50_1" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/iv_user"
        android:fontFamily="@font/mina_regular"
        android:text="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/iv_omnichannel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/et_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/omnichannel_50_1" />

    <TextView
        android:id="@+id/txt_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/iv_omnichannel"
        android:fontFamily="@font/mina_regular"
        android:text="@string/channel"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_omnichannel"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:drawableEnd="@drawable/forward_32_2" />

    <Button
        android:layout_width="194dp"
        android:layout_height="64dp"
        android:layout_below="@+id/et_channel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/mina_regular"
        android:text="@string/join"
        android:textColor="@color/dark_vader"
        android:textSize="20sp" />

</RelativeLayout>